# beacon-indexer

./: .env  Cargo.toml  README.md  docker-compose.yml  output  output.json
api/: Cargo.toml
api/src/: lib.rs  main.rs
client/: Cargo.toml
client/src/: lib.rs  subscription.rs
client/src/model/: attestation.rs  block.rs  checkpoint.rs  committee.rs  mod.rs  proposer.rs  state.rs  validator.rs
common/: Cargo.toml
common/src/: attestation.rs  block.rs  committee.rs  epoch.rs  lib.rs  state.rs  util.rs  validator.rs
dockerfiles/postgres-init.d/: init_db_indexer.sql
indexer/: Cargo.toml
indexer/src/: lib.rs  main.rs  polling.rs  pubsub.rs  util.rs
service/: Cargo.toml
service/src/: epoch.rs  lib.rs  model.rs  validator.rs
store/: Cargo.toml  Dockerfile
store/docker/: entrypoint.sh
store/migrations/2023-07-14-181200_epoch/: down.sql  up.sql
store/migrations/2023-07-14-181205_validator/: down.sql  up.sql
store/migrations/2023-07-14-181212_attestation/: down.sql  up.sql
store/migrations/2023-07-16-171549_committee/: down.sql  up.sql
store/migrations/2023-07-17-001759_proposer/: down.sql  up.sql
store/src/: attestation.rs  committee.rs  epoch.rs  lib.rs  proposer.rs  schema.rs  validator.rs
