[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
async-graphql = "5.0.10"
async-graphql-actix-web = "5.0.10"
env_logger = "0.10.0"
envconfig = "0.10.0"
log = "0.4.19"
service = { path = "../service" }
store = { path = "../store" }
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
