[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
bytes = "1.4.0"
common = { path = "../common" }
futures-core = "0.3.28"
futures-util = "0.3.28"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
