[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
client = { path = "../client" }
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt"] }
