[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
deadpool-postgres = "0.10.5"
envconfig = "0.10.0"
itertools = "0.11.0"
rust_decimal = { version = "1.30.0", features = ["db-tokio-postgres"] }
service = { path = "../service" }
tokio-postgres = "0.7.8"
